--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "paper": "^0.12.17",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3",
         "react-error-boundary": "^4.0.13",
         "react-hook-form": "^7.51.2",
         "react-router-dom": "^6.22.3",
