--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.5",
         "@heroicons/react": "^2.1.3",
+        "@prisma/client": "^5.11.0",
         "@svgdotjs/svg.js": "^3.2.0",
         "@tanstack/react-query": "^5.28.9",
         "axios": "^1.6.8",
@@ -111,6 +112,7 @@
         "husky": "^9.0.11",
         "lint-staged": "^15.2.2",
         "prettier": "^3.2.5",
+        "prisma": "^5.11.0",
         "standard-version": "^9.5.0",
         "typescript": "^5.4.3",
         "vite": "^5.2.7",
