--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
         "@prisma/client": "^5.11.0",
         "@svgdotjs/svg.js": "^3.2.0",
         "@tanstack/react-query": "^5.28.9",
+        "@tanstack/react-router": "^1.26.3",
         "axios": "^1.6.8",
         "bin-pack": "^1.0.2",
         "bin-pack-with-constraints": "^1.0.1",
@@ -97,6 +98,8 @@
         "@commitlint/cli": "^19.2.1",
         "@commitlint/config-conventional": "^19.1.0",
         "@openapitools/openapi-generator-cli": "^2.13.1",
+        "@tanstack/router-devtools": "^1.26.3",
+        "@tanstack/router-vite-plugin": "^1.25.0",
         "@testing-library/react": "^14.2.2",
         "@types/bin-pack": "^1.0.3",
         "@types/react": "^18.2.73",
