--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,9 @@
         "noFallthroughCasesInSwitch": true,
         "esModuleInterop": true,
         "paths": {
-//            "@/*": ["./src/*"]
-        }
+            //            "@/*": ["./src/*"]
+        },
+        "incremental": true
     },
     "include": ["src"],
     "references": [{ "path": "./tsconfig.node.json" }]
