--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
         "react-hook-form": "^7.51.2",
         "react-router-dom": "^6.22.3",
         "react-use": "^17.5.0",
-        "rectangle-bin-pack": "^0.3.5"
+        "rectangle-bin-pack": "^0.3.5",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "@chakra-ui/cli": "^2.4.1",
@@ -105,6 +106,7 @@
         "@types/bin-pack": "^1.0.3",
         "@types/react": "^18.2.73",
         "@types/react-dom": "^18.2.23",
+        "@types/uuid": "^9.0.8",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^7.4.0",
         "@vitejs/plugin-react": "^4.2.1",
