--- a/package.json
+++ b/package.json
@@ -125,5 +125,6 @@
         "typescript": "^5.4.3",
         "vite": "^5.2.7",
         "vitest": "^1.4.0"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
