--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "classnames": "^2.5.1",
         "framer-motion": "^11.0.24",
         "jotai": "^2.7.2",
+        "jotai-location": "^0.5.5",
         "maxrects-packer": "^2.7.3",
         "paper": "^0.12.17",
         "react": "^18.2.0",
